--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "main": "app.js",
   "author": "shinas vb",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1",
+    "nodemon": "^2.0.20"
+  }
 }
