--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.6.1",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20"
   }
 }
