--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "session": "^0.1.0"
   }
 }
