--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "session-file-store": "^1.5.0"
   }
 }
