--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20",
-    "session": "^0.1.0",
     "session-file-store": "^1.5.0"
   }
 }
